# sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEEDBACK.md  README.md  SECURITY.md  biome.json  docker-compose.yml  index.ts  package.json  test_admin.ts  test_client.ts  tsconfig.json
.github/workflows/: ci.yml  publish-sdks.yml
docs/: SECURITY_AUDIT_2026_01.md
examples/: README.md  requirements.txt  sentinel_utils.py
examples/autogen/: README.md  main.py  requirements.txt
examples/autogpt/: README.md  mock_autogpt.py
examples/crewai/: .env.example  README.md  crewai_sentinel.py  main.py  requirements.txt
examples/django/: README.md  requirements.txt
examples/fastapi/: README.md  main.py  requirements.txt
examples/haystack/: main.py  requirements.txt
examples/langchain/: README.md  langchain_sentinel.py
examples/langchain-js/: README.md  index.ts  package.json
examples/langgraph/: README.md  main.py  requirements.txt
examples/llamaindex/: README.md  llamaindex_sentinel.py  requirements.txt
examples/mcp-server/: README.md  package-lock.json  package.json
examples/multi-agent-delegation/: README.md  main.py
examples/nextjs-app-router/: README.md
landing/: README.md  index.html
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/examples/: demo.py  langchain_integration.py
sdks/python/src/sentinel_client/: __init__.py  cli.py  client.py  exceptions.py  types.py
sdks/python/tests/: test_cli.py  test_client.py  test_environment.py
src/: admin_ui.ts  server.test.ts  server.ts  types.ts
(+30 files in other folders)
