[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-client"
version = "0.1.1"
description = "Python Client SDK for Sentinel Agent Secret Management"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "SubCode Ventures", email = "hello@subcode.ventures" },
]
dependencies = [
  "httpx>=0.24.0",
  "pydantic>=2.0.0",
]

[project.scripts]
sentinel = "sentinel_client.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
